--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,12 +12,12 @@
 
         <!-- BEGIN STYLESHEETS -->
         <link href='http://fonts.googleapis.com/css?family=Roboto:300italic,400italic,300,400,500,700,900' rel='stylesheet' type='text/css'/>
-        <link type="text/css" rel="stylesheet" href="/assets/css/theme-4/bootstrap.css?1422792965" />
-        <link type="text/css" rel="stylesheet" href="/assets/css/theme-4/materialadmin.css?1425466319" />
-        <link type="text/css" rel="stylesheet" href="/assets/css/theme-4/font-awesome.min.css?1422529194" />
-        <link type="text/css" rel="stylesheet" href="/assets/css/theme-4/material-design-iconic-font.min.css?1421434286" />
-        <link type="text/css" rel="stylesheet" href="/assets/css/theme-4/libs/DataTables/jquery.dataTables.css">
-        <link type="text/css" rel="stylesheet" href="/assets/css/main.css">
+        <link type="text/css" rel="stylesheet" href="{{ asset('assets/css/theme-4/bootstrap.cs') }}s" />
+        <link type="text/css" rel="stylesheet" href="{{ asset('assets/css/theme-4/materialadmin.css') }}" />
+        <link type="text/css" rel="stylesheet" href="{{ asset('assets/css/theme-4/font-awesome.min.css') }}" />
+        <link type="text/css" rel="stylesheet" href="{{ asset('assets/css/theme-4/material-design-iconic-font.min.css') }}" />
+        <link type="text/css" rel="stylesheet" href="{{ asset('assets/css/theme-4/libs/DataTables/jquery.dataTables.css') }}">
+        <link type="text/css" rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
         
         {% block stylesheets %}{% endblock %}
         <!-- END STYLESHEETS -->
@@ -293,24 +293,44 @@
         </div><!--end #base-->
         <!-- END BASE -->        
         <!-- BEGIN JAVASCRIPT -->
-        <script src="/assets/js/libs/jquery/jquery-1.11.2.min.js"></script>
-        <script src="/assets/js/libs/jquery/jquery-migrate-1.2.1.min.js"></script>
-        <script src="/assets/js/libs/bootstrap/bootstrap.min.js"></script>
-        <script src="/assets/js/libs/spin.js/spin.min.js"></script>
-        <script src="/assets/js/libs/autosize/jquery.autosize.min.js"></script>
-        <script src="/assets/js/libs/nanoscroller/jquery.nanoscroller.min.js"></script>
-        <script src="/assets/js/core/source/App.js"></script>
-        <script src="/assets/js/core/source/AppNavigation.js"></script>
-        <script src="/assets/js/core/source/AppOffcanvas.js"></script>
-        <script src="/assets/js/core/source/AppCard.js"></script>
-        <script src="/assets/js/core/source/AppForm.js"></script>
-        <script src="/assets/js/core/source/AppNavSearch.js"></script>
-        <script src="/assets/js/core/source/AppVendor.js"></script>
-        <script src="/assets/js/core/demo/Demo.js"></script>
-        <script src="/assets/js/libs/DataTables/jquery.dataTables.min.js"></script>
-        <script src="/assets/js/core/source/Angular.js"></script> 
-        <script src="/assets/js/core/source/angular-datatables.min.js"></script>
-        <script src="/assets/js/libs/alexander.js"></script>
+        
+        {% javascripts
+            'assets/js/libs/jquery/jquery-1.11.2.min.js'
+            'assets/js/libs/jquery/jquery-migrate-1.2.1.min.js' 
+            'assets/js/libs/bootstrap/bootstrap.min.js'
+            'assets/js/libs/spin.js/spin.min.js'
+            'assets/js/core/source/*'
+            'assets/js/libs/autosize/jquery.autosize.min.js'
+            'assets/js/libs/nanoscroller/jquery.nanoscroller.min.js'
+            'assets/js/libs/DataTables/jquery.dataTables.min.js'
+            'assets/js/core/source/Angular.js'
+            'assets/js/core/source/angular-datatables.min.js'
+            'assets/js/libs/alexander.js' %}
+            <script src="{{ asset_url }}"></script>
+        {% endjavascripts %} 
+            
+            
+        <!--
+        <script src="{{ asset('assets/js/libs/jquery/jquery-1.11.2.min.js') }}"></script>
+        <script src="{{ asset('assets/js/libs/jquery/jquery-migrate-1.2.1.min.js') }}"></script>
+        <script src="{{ asset('assets/js/libs/bootstrap/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('assets/js/libs/spin.js/spin.min.js') }}"></script>
+        <script src="{{ asset('assets/js/libs/autosize/jquery.autosize.min.js') }}"></script>
+        <script src="{{ asset('assets/js/libs/nanoscroller/jquery.nanoscroller.min.js') }}"></script>
+        <script src="{{ asset('assets/js/core/source/App.js') }}"></script>
+        <script src="{{ asset('assets/js/core/source/AppNavigation.js') }}"></script>
+        <script src="{{ asset('assets/js/core/source/AppOffcanvas.js') }}"></script>
+        <script src="{{ asset('assets/js/core/source/AppCard.js') }}"></script>
+        <script src="{{ asset('assets/js/core/source/AppForm.js') }}"></script>
+        <script src="{{ asset('assets/js/core/source/AppNavSearch.js') }}"></script>
+        <script src="{{ asset('assets/js/core/source/AppVendor.js') }}"></script>
+        <script src="{{ asset('assets/js/core/demo/Demo.js') }}"></script>
+        <script src="{{ asset('assets/js/libs/DataTables/jquery.dataTables.min.js') }}"></script>
+        <script src="{{ asset('assets/js/core/source/Angular.js') }}"></script> 
+        <script src="{{ asset('assets/js/core/source/angular-datatables.min.js') }}"></script>
+        <script src="{{ asset('assets/js/libs/alexander.js') }}"></script>
+        -->
+            
         {% block javascripts %}{% endblock %}
         <!-- END JAVASCRIPT -->    
     </body>
