--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,7 +40,7 @@
                             <div class="brand-holder">
                                 <a href="/" >
                                     <!--span class="text-lg text-bold text-primary">MATERIAL ADMIN</span-->
-                                    <img style="height: 50px;" src="//assets/img/logo.png"/>
+                                    <img style="height: 50px;" src="/assets/img/logo.png"/>
                                 </a>
                             </div>
                         </li>
@@ -57,7 +57,7 @@
                     <ul class="header-nav header-nav-profile">
                         <li class="dropdown">
                             <a href="javascript:void(0);" class="dropdown-toggle ink-reaction" data-toggle="dropdown">
-                                <img src="//assets/img/avatar1.jpg?1403934956" alt="" />
+                                <img src="/assets/img/avatar1.jpg?1403934956" alt="" />
                                 <span class="profile-info">
                                     <?php echo $this->user->getFirstName() . " " . $this->user->getLastName() ?>
                                     <small><?php echo $this->userrole; ?></small>
