--- a/app/Resources/views/elements/datatable.twig
+++ b/app/Resources/views/elements/datatable.twig
@@ -5,6 +5,9 @@
     <table class="table table-striped dataTable {{ctrl}}">
         <thead>
             <tr>
+                <td ng-repeat="field in fields"><input class="style-primary-bright form-control search_init" type="[[ field.search ]]" /></td>
+            </tr> 
+            <tr>
                 <td ng-repeat="field in fields">[[ field.name ]]</td>
             </tr>                
         </thead> 
