--- a/app/Resources/views/elements/datatable.twig
+++ b/app/Resources/views/elements/datatable.twig
@@ -20,7 +20,5 @@
 {% block stylesheets %}{% endblock %}
 
 {% block javascripts %}
-<script>
-    $(".{{ctrl}}").alexander("{{app}}", "{{ctrl}}", "{{url}}");
-    </script>
+<script>$(".{{ctrl}}").alexander("{{app}}", "{{ctrl}}", "{{url}}");</script>
 {% endblock %}
