--- a/app/Resources/views/product/index.html.twig
+++ b/app/Resources/views/product/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-{{ render(controller('AppBundle:Customer:datatable', { 'ctrl': ctrl,'app':app,'url':url })) }}
+{{ render(controller('AppBundle:Product:datatable', { 'ctrl': ctrl,'app':app,'url':url })) }}
 {% endblock %}
 
 {% block stylesheets %}
