--- a/app/Resources/views/product/view.html.twig
+++ b/app/Resources/views/product/view.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-{{ render(controller('AppBundle:Customer:tab', { 'ctrl': ctrl,'app':app,'url':url }) ) }}
+{{ render(controller('AppBundle:Product:tab', { 'ctrl': ctrl,'app':app,'url':url }) ) }}
 {% endblock %}
 {% block stylesheets %}
 {% endblock %}
