--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -304,7 +304,7 @@
             'assets/js/libs/DataTables/jquery.dataTables.min.js'
             'assets/js/core/source/Angular.js'
             'assets/js/core/source/angular-datatables.min.js'
-            'assets/js/libs/alexander.js' %}
+            'assets/js/libs/alexander/*' %}
             <script src="{{ asset_url }}"></script>
         {% endjavascripts %} 
             
