--- a/app/Resources/views/elements/tabs.twig
+++ b/app/Resources/views/elements/tabs.twig
@@ -1,31 +1,5 @@
-
 {% block body %}
-
-
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-head">
-                <ul class="nav nav-tabs" data-toggle="tabs">
-                    <li class="active"><a href="#first1">FIRST TAB</a></li>
-                    <li><a href="#second1">NO. TWO</a></li>
-                    <li><a href="#third1">THE THIRD</a></li>
-                </ul>
-            </div><!--end .card-head -->
-            <div class="card-body tab-content">
-                <div class="tab-pane active" id="first1"><p>Per at postea mediocritatem, vim numquam aliquid eu, in nam sale gubergren. Fuisset delicatissimi duo, qui ut animal noluisse erroribus. Ea eum veniam audire. Dicant vituperata consequuntur.</p>
-                </div>
-                <div class="tab-pane" id="second1"><p>Ad ius duis dissentiunt, an sit harum primis persecuti, adipisci tacimates mediocrem sit et. Id illud voluptaria omittantur qui, te affert nostro mel. Cu conceptam vituperata temporibus has.</p>
-                </div>
-                <div class="tab-pane" id="third1"><p>Duo semper accumsan ea, quidam convenire cum cu, oportere maiestatis incorrupte est eu. Soluta audiam timeam ius te, idque gubergren forensibus ad mel, persius urbanitas usu id. Civibus nostrum fabellas mea te, ne pri lucilius iudicabit. Ut cibo semper vituperatoribus vix, cum in error elitr. Vix molestiae intellegat omittantur an, nam cu modo ullum scriptorem.</p>
-                    <p>Quod option numquam vel in, et fuisset delicatissimi duo, qui ut animal noluisse erroribus. Ea eum veniam audire. Per at postea mediocritatem, vim numquam aliquid eu, in nam sale gubergren. Dicant vituperata consequuntur at sea, mazim commodo</p>
-                </div>
-            </div><!--end .card-body -->
-        </div><!--end .card -->
-        <em class="text-caption">Left aligned tabs</em>
-    </div><!--end .col -->
-    <!-- END LAYOUT LEFT ALIGNED -->
-
-    <div class="col-md-6" ng-app="{{app}}" ng-controller="{{ctrl}}">
+    <div class="alexander {{ctrl}}" ng-app="{{app}}" ng-controller="{{ctrl}}">
         <div class="card">
             <div class="card-head">
                 <ul class="nav nav-tabs" data-toggle="tabs">
