--- a/app/Resources/views/elements/datatable.twig
+++ b/app/Resources/views/elements/datatable.twig
@@ -1,7 +1,7 @@
 
 {% block body %}
 <div ng-app="{{app}}" ng-controller="{{ctrl}}"> 
-    <table class="table table-striped dataTable {{ctrl}}">
+    <table class="alexander table table-striped dataTable {{ctrl}}">
         <thead>
             <tr>
                 <td ng-repeat="field in fields"><input class="style-primary-bright form-control search_init" type="[[ field.search ]]" /></td>
