--- a/app/Resources/views/elements/tabs.twig
+++ b/app/Resources/views/elements/tabs.twig
@@ -7,7 +7,7 @@
                 </ul>
             </div><!--end .card-head -->
             <div class="card-body tab-content">
-                <div  ng-repeat="field in fields" class="tab-pane [[field.active]]" id="[[field.index]]"><p>[[ field.name ]]</p>
+                <div  ng-repeat="field in fields" class="tab-pane [[field.active]]" id="[[field.index]]"><p>[[ field.content ]]</p>
                 </div>
             </div><!--end .card-body -->
         </div><!--end .card -->
