--- a/app/Resources/views/elements/tabs.twig
+++ b/app/Resources/views/elements/tabs.twig
@@ -3,11 +3,11 @@
         <div class="card">
             <div class="card-head">
                 <ul class="nav nav-tabs" data-toggle="tabs">
-                    <li ng-repeat="field in fields" class="[[field.active]]" ><a href="#[[field.index]]">[[ field.name ]]</a></li>
+                    <li ng-repeat="tab in tabs" class="[[tab.active]]" ><a href="#[[tab.index]]">[[ tab.name ]]</a></li>
                 </ul>
             </div><!--end .card-head -->
             <div class="card-body tab-content">
-                <div  ng-repeat="field in fields" class="tab-pane [[field.active]]" id="[[field.index]]"><p>[[ field.content ]]</p>
+                <div  ng-repeat="tab in tabs" class="tab-pane [[tab.active]]" id="[[tab.index]]"><p>[[ tab.content ]]</p>
                 </div>
             </div><!--end .card-body -->
         </div><!--end .card -->
