--- a/app/Resources/views/elements/tabs.twig
+++ b/app/Resources/views/elements/tabs.twig
@@ -1,13 +1,15 @@
 {% block body %}
-    <div class="alexander {{ctrl}}" ng-app="{{app}}" ng-controller="{{ctrl}}">
-        <div class="card">
-            <div class="card-head">
-                <ul class="nav nav-tabs" data-toggle="tabs">
-                    <li ng-repeat="tab in tabs" class="[[tab.active]]" ><a href="#[[tab.index]]">[[ tab.name ]]</a></li>
-                </ul>
-            </div><!--end .card-head -->
-            <div class="card-body tab-content">
-                <div  ng-repeat="tab in tabs" class="tab-pane [[tab.active]]" id="[[tab.index]]"><p>[[ tab.content ]]</p>
+<div class="alexander {{ctrl}}" ng-app="{{app}}" ng-controller="{{ctrl}}">
+    <div class="card">
+        <div class="card-head">
+            <ul class="nav nav-tabs" data-toggle="tabs">
+                <li ng-repeat="tab in tabs" class="[[tab.active]]" ><a href="#[[tab.index]]">[[ tab.name ]]</a></li>
+            </ul>
+        </div><!--end .card-head -->
+        <div class="card-body tab-content">
+            <div  ng-repeat="tab in tabs" class="tab-pane [[tab.active]]" id="[[tab.index]]">
+                    
+                    {{ render(controller('AppBundle:Customer:tab', { 'ctrl': ctrl,'app':app,'url':url,'type':'[[tab.type]]'})) }}
                 </div>
             </div><!--end .card-body -->
         </div><!--end .card -->
