--- a/app/Resources/views/elements/tabs.twig
+++ b/app/Resources/views/elements/tabs.twig
@@ -1,19 +1,15 @@
 {% block body %}
-<div class="alexander {{ctrl}}" ng-app="{{app}}" ng-controller="{{ctrl}}">
-    <div class="card">
-        <div class="card-head">
-            <ul class="nav nav-tabs" data-toggle="tabs">
-                <li ng-repeat="tab in tabs" class="[[tab.active]]" ><a href="#[[tab.index]]">[[ tab.name ]]</a></li>
-            </ul>
-        </div><!--end .card-head -->
-        <div class="card-body tab-content">
-            <div  ng-repeat="tab in tabs" ng-bind-html="deliberatelyTrustDangerousSnippet(tab.content)"  class="tab-pane [[tab.active]]" id="[[tab.index]]">
-                    
-                </div>
-            </div><!--end .card-body -->
-        </div><!--end .card -->
-    </div><!--end .col -->
-    <!-- END LAYOUT LEFT ALIGNED -->
+    <div class="alexander {{ctrl}}" ng-app="{{app}}" ng-controller="{{ctrl}}">
+        <tabset>
+            <tab ng-repeat="tab in tabs" heading="[[ tab.title ]]" active="tab.active" disable="tab.disable">
+                
+                <formly-form model="tab.form1.model" fields="tab.form1.fields" form="vm.form1" options="tab.form1.options"></formly-form>
+                [[ tab.content ]]
+                <formly-form model="tab.form2.model" fields="tab.form1.fields" form="vm.form2" options="tab.form2.options"></formly-form>
+                                
+            </tab>
+        </tabset>   
+    </div>    
 {% endblock %}
 
 {% block stylesheets %}
