--- a/app/Resources/views/elements/tabs.twig
+++ b/app/Resources/views/elements/tabs.twig
@@ -1,14 +1,17 @@
 {% block body %}
+    
     <div class="alexander {{ctrl}}" ng-app="{{app}}" ng-controller="{{ctrl}}">
-        <tabset>
-            <tab ng-repeat="tab in tabs" heading="[[ tab.title ]]" active="tab.active" disable="tab.disable">
-                
-                <formly-form model="tab.form1.model" fields="tab.form1.fields" form="vm.form1" options="tab.form1.options"></formly-form>
-                [[ tab.content ]]
-                <formly-form model="tab.form2.model" fields="tab.form1.fields" form="vm.form2" options="tab.form2.options"></formly-form>
-                                
-            </tab>
-        </tabset>   
+        <form ng-submit="onSubmit()" name="form" novalidate>            
+            <tabset>
+                <tab ng-repeat="tab in tabs" heading="[[ tab.title ]]" active="tab.active" disable="tab.disable">
+
+                    <formly-form model="tab.form.model" fields="tab.form.fields" form="form" options="tab.form.options"></formly-form>
+                    <button type="submit" class="btn btn-primary submit-button" ng-disabled="form.$invalid">Submit</button>
+                    <button type="button" class="btn btn-default" ng-click="resetAllForms()">Reset</button>
+
+                </tab>
+            </tabset>  
+        </form>
     </div>    
 {% endblock %}
 
