--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{{pagename}}</title>
+        <title></title>
 
         <!-- BEGIN META -->
         <meta charset="utf-8">
@@ -101,7 +101,7 @@
                                     <div class="card-head style-primary-light">
                                         <header>
                                             <i class="fa fa-fw fa-tag"></i>
-                                            {{pagename}}
+                                           
                                         </header>
                                     </div>
                                     <div class="card-body">
@@ -308,6 +308,8 @@
             'assets/js/libs/angular/angular-ui-bootstrap-tpls.js' 
             'assets/js/libs/angular/angular-sanitize.js' 
             'assets/js/libs/angular/angular-formly.js' 
+            'assets/js/libs/angular/angular-animate.js' 
+            'assets/js/libs/angular/angular-messages.js' 
             'assets/js/libs/angular/angular-formly-templates-bootstrap.js' 
             'assets/js/libs/alexander/*' 
         %}
