--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -311,6 +311,7 @@
             'assets/js/libs/angular/angular-animate.js' 
             'assets/js/libs/angular/angular-messages.js' 
             'assets/js/libs/angular/angular-formly-templates-bootstrap.js' 
+            'assets/js/libs/angular/angular-base64.js' 
             'assets/js/libs/alexander/*' 
         %}
             <script src="{{ asset_url }}"></script>
